--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="style.css" />
     <title>Learning JavaScript</title>
   </head>
-
+  <div>
+    <h1>Hello, World!!!</h1>
+  </div>
   <script src="script.js"></script>
   <body></body>
 </html>
